# shamir

./: .gitignore  Cargo.toml  LICENSE  README.md  cmd.sh  config.yaml  frost.md  socat.sh
common/: Cargo.toml  build.rs  config.yaml
common/src/: config.rs  lib.rs  logging.rs
coordinator/: Cargo.toml
coordinator-signer/: Cargo.toml
coordinator-signer/proptest-regressions/keystore/: keystore.txt
coordinator-signer/src/: behaviour.rs  commands.rs  coordinator.rs  crypto.rs  keystore.rs  lib.rs  main.rs  message.rs  node.rs  signer.rs  types.rs  utils.rs
coordinator-signer/src/coordinator/: command.rs  manager.rs  session.rs  session_ex.rs
coordinator-signer/src/coordinator/session/: dkg.rs  signing.rs
coordinator-signer/src/coordinator/session/signing/: subsession.rs
coordinator-signer/src/coordinator/session_ex/: combinations.rs  dkg_ex.rs  signing_ex.rs
coordinator-signer/src/coordinator/session_ex/signing_ex/: subsession.rs
coordinator-signer/src/crypto/: cipher.rs  dkg.rs  identifier.rs  pkid.rs  session.rs  signing.rs  signing_session.rs  traits.rs  validator_identity.rs
coordinator-signer/src/crypto/cipher/: ed25519.rs  ed448.rs  p256.rs  ristretto255.rs  secp256k1.rs  secp256k1_tr.rs  tweak.rs
coordinator-signer/src/crypto/session/: error.rs  session_id.rs  subsession.rs
coordinator-signer/src/crypto/session/subsession/: pkid.rs  signature_suite.rs  subsession_id.rs
coordinator-signer/src/crypto/traits/: ed25519.rs
coordinator-signer/src/crypto/validator_identity/: ed25519.rs  ed25519_identity.rs  p2p_identity.rs  sr25519_identity.rs
coordinator-signer/src/keystore/: keystore.rs  management.rs
coordinator-signer/src/session/: session.rs  signing.rs  signing_session.rs
coordinator-signer/src/session/session/: error.rs  subsession.rs
coordinator-signer/src/signer/: command.rs  manager.rs  session.rs
coordinator-signer/src/signer/session/: dkg.rs  dkg_ex.rs  signing.rs  signing_ex.rs
coordinator-signer/src/signer/session/signing/: base.rs  subsession.rs
coordinator-signer/src/signer/session/signing_ex/: base.rs  subsession.rs
coordinator-signer/src/types/: auto_dkg.rs  error.rs  message.rs  session.rs  signature_suite.rs  validator.rs
coordinator-signer/src/types/message/: behaviour.rs  dkg.rs  dkg_ex.rs  signing.rs  signing_ex.rs
coordinator-signer/src/types/session/: session_id.rs  subsession_id.rs
coordinator/src/: main.rs  session.rs
frost-core/: Cargo.toml
frost-core/src/: identifier.rs  scalar_mul.rs  signing_key.rs
keys_for_test/: coordinator.key  node.key  signer1.key  signer10.key  signer11.key  signer2.key  signer3.key  signer4.key  signer5.key  signer6.key  signer7.key  signer8.key  signer9.key  signerbad.key
signer/src/: main.rs
tss/: Cargo.toml
tss-sdk/: Cargo.toml
tss-sdk/src/: lib.rs
tss/src/: commands.rs  main.rs  webserver.rs
tss_sdk/: Cargo.toml
tss_sdk/src/: lib.rs
veritss/: Cargo.toml
veritss/benches/: bench.rs
veritss/src/: commands.rs  ed25519.rs  integer.rs  lib.rs  main.rs  secp256k1.rs
veritss/src/ed25519/keys/: refresh.rs  repairable.rs
veritss/src/ed25519/tests/: batch.rs  coefficient_commitment.rs  deserialize.rs  proptests.rs  vss_commitment.rs
veritss/src/secp256k1/keys/: dkg.rs  refresh.rs  repairable.rs
veritss/tests/: common_traits_tests.rs  integration_tests.rs  interoperability_tests.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_tests.rs
veritss/tests/helpers/: mod.rs  samples.rs
veritss_sdk/: Cargo.toml
