[package]
name = "coordinator-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pem = { version = "3" }
veritss = { path = "../veritss" }
common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.31"
libp2p = { version = "0.54", features = [
    "identify",
    "noise",
    "tcp",
    "tokio",
    "yamux",
] }
anyhow = "1.0.70"
tokio-uds = "0.2"

clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.39"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
