[package]
name = "coordinator-signer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pem = { version = "3" }
common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.31"
libp2p = { version = "0.55", features = [
    "identify",
    "noise",
    "tcp",
    "tokio",
    "yamux",
    "ping",
    "request-response",
    "macros",
    "cbor",
    "serde",
    "rendezvous",
] }
anyhow = "1.0.70"
frost-core = { git = "https://github.com/verisense-network/frost.git", branch = "main", package = "frost-core", features = [
    "serde",
] }
frost-ed25519 = { git = "https://github.com/verisense-network/frost.git", branch = "main", package = "frost-ed25519", features = [
    "serde",
] }
frost-secp256k1 = { git = "https://github.com/verisense-network/frost.git", branch = "main", package = "frost-secp256k1" }
frost-secp256k1-tr = { git = "https://github.com/verisense-network/frost.git", branch = "main", package = "frost-secp256k1-tr" }

clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.39"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

async-trait = "0.1"
bytes = "1.6.0"
sha2 = "0.10.8"
uuid = { version = "1.3", features = ["serde", "v4"] }
hex = "0.4.3"
ed25519-dalek = "2.1"
rand_core = "0.6.4"
proptest = "1.0.100"
thiserror = "2.0"
rand = "0.8.5"
serde_with = "3"

strum_macros = "0.26"

strum = { version = "0.26", features = ["derive"] }
k256 = "0.13.4"
crypto-bigint = "0.5.5"
curve25519-dalek = "4.1.3"
