[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veritss = { path = "../veritss" }
libp2p = "0.54"
futures = "0.3.1"
void = "1"
async-std = { version = "1.6.2", features = ["attributes"] }
smallvec = "1.6.1"
futures-timer = "3.0.2"
